--- a/styleteste.css
+++ b/styleteste.css
@@ -17,8 +17,8 @@ a {
 }
 .bar {
   padding: 15px;
-  border-top: solid 1px #d4af37;
-  border-bottom: solid 1px #d4af37;
+  border-top: solid 1px #a3a19c;
+  border-bottom: solid 1px #a3a19c;
 }
 .content {
   max-width: 1440px;
@@ -33,17 +33,17 @@ a {
 }
 .footer {
   min-height: 100px;
-  border-top: solid 1px #d4af37;
+  border-top: solid 1px #a3a19c;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .anchors {
-  border-left: solid 1px #d4af37;
+  border-left: solid 1px #a3a19c;
   padding-left: 15px;
 }
 .sidebar {
-  border-right: solid 1px #d4af37;
+  border-right: solid 1px #a3a19c;
 }
 figure {
   display: flex;
@@ -64,7 +64,7 @@ img {
 table,
 td,
 th {
-  border: 1px solid #d4af37;
+  border: 1px solid #a3a19c;
   background-color: #fff6e1;
 }
 
@@ -76,7 +76,7 @@ th {
 
 @media (max-width: 900px) {
   .sidebar {
-    border: 2px solid #d4af37;
+    border: 2px solid #a3a19c;
     background-color: #ffebb9;
     padding: 10px;
   }
